--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.6",
@@ -29,6 +30,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "serpapi": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "zod": "3.25.76"
   },
@@ -41,6 +43,12 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
+    "turbo": "^2.5.6",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "npm@8.5.0",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
